# stock-market-project

./: README.md  aggregations.py  app.py  data_cleaning.py  fix_author.py  pyproject.toml
data/: agg_avg_volume_by_sector.parquet  agg_daily_avg_close.parquet  agg_daily_returns.parquet  cleaned.parquet
