[project]
name = "stock-market-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "python-dateutil>=2.9.0.post0",
    "streamlit>=1.50.0",
]

[tool.uv.workspace]
members = [
    "stock-market-project",
]
